--- a/src/azure-cli/azure/cli/command_modules/vm/linter_exclusions.yml
+++ b/src/azure-cli/azure/cli/command_modules/vm/linter_exclusions.yml
@@ -9,6 +9,44 @@ vmss create:
         public_ip_address_allocation:
             rule_exclusions:
             - missing_parameter_help
+        enable_cross_zone_upgrade:
+            rule_exclusions:
+            - option_length_too_long
+        max_batch_instance_percent:
+            rule_exclusions:
+            - option_length_too_long
+        max_unhealthy_instance_percent:
+            rule_exclusions:
+            - option_length_too_long
+        max_unhealthy_upgraded_instance_percent:
+            rule_exclusions:
+            - option_length_too_long
+        pause_time_between_batches:
+            rule_exclusions:
+            - option_length_too_long
+        prioritize_unhealthy_instances:
+            rule_exclusions:
+            - option_length_too_long
+vmss update:
+    parameters:
+        enable_cross_zone_upgrade:
+            rule_exclusions:
+            - option_length_too_long
+        max_batch_instance_percent:
+            rule_exclusions:
+            - option_length_too_long
+        max_unhealthy_instance_percent:
+            rule_exclusions:
+            - option_length_too_long
+        max_unhealthy_upgraded_instance_percent:
+            rule_exclusions:
+            - option_length_too_long
+        pause_time_between_batches:
+            rule_exclusions:
+            - option_length_too_long
+        prioritize_unhealthy_instances:
+            rule_exclusions:
+            - option_length_too_long
 vmss encryption enable:
     parameters:
         key_encryption_algorithm:
